fix WaTor sliders

--- a/src/resource/GUItext.properties
+++ b/src/resource/GUItext.properties
@@ -20,8 +20,8 @@ LifeError=Error Reading Game of Life Parameters
 RedBlue=Red/Blue Ratio
 Empty=Empty Ratio
 Ideal=Ideal Ratio
-FireChance=Chance of Catching Fire
-SharkGain=Shark Energy Gain
-FishRep=Fish Reproduction Rate
-SharkRep=Shark Reproduction Rate
-SharkStarve=Shark Starvation Level
+FireChance=Chance of Catching
+SharkGain=Shark Gain
+FishRep=Fish Reproduction
+SharkRep=Shark Reproduction
+SharkStarve=Shark Starvation
