Refactor sliders to be added easier and make code simpler to follow

--- a/src/resource/GUItext.properties
+++ b/src/resource/GUItext.properties
@@ -17,7 +17,7 @@ SchellingError=Error Reading Segregation Parameters
 WaTorError=Error Reading WaTor Parameters
 FireError=Error Reading Fire Parameters
 LifeError=Error Reading Game of Life Parameters
-RedBlue=Red/Blue Ratio
+RedBlue=Blue/Red Ratio
 Empty=Empty Ratio
 Ideal=Ideal Ratio
 FireChance=Chance of Catching
@@ -25,3 +25,4 @@ SharkGain=Shark Gain
 FishRep=Fish Reproduction
 SharkRep=Shark Reproduction
 SharkStarve=Shark Starvation
+SharkFish=Shark/Fish
