Refactored Initializer Class to have only 1 'if' statement

--- a/src/resource/GUItext.properties
+++ b/src/resource/GUItext.properties
@@ -5,7 +5,7 @@ GoError=Please Select A Simulation File
 GameOfLife=Game of Life
 Segregation=Segregation
 Fire=Spreading Fire
-Predator-Prey=WaTor World
+Predator-Prey=WaTor
 Size=Size
 Speed=Speed
 Back=Back
