change startscene strings to resource

--- a/src/resource/GUItext.properties
+++ b/src/resource/GUItext.properties
@@ -1,4 +1,6 @@
 Title=Cell Society
+ChooseFile=Choose File
+Exit=Exit
 FileChooser=Please Select an XML Simulation File
 ErrorMessage=You Cannot Do That!
 GoError=Please Select A Simulation File
