--- a/src/resource/GUItext.properties
+++ b/src/resource/GUItext.properties
@@ -2,7 +2,7 @@ Title=Cell Society
 ChooseFile=Choose File
 Exit=Exit
 FileChooser=Please Select an XML Simulation File
-ErrorMessage=You Cannot Do That!
+ErrorMessage=Error
 GoError=Please Select A Simulation File
 GameOfLife=Game of Life
 Segregation=Segregation
@@ -28,3 +28,4 @@ FishRep=Fish Reproduction
 SharkRep=Shark Reproduction
 SharkStarve=Shark Starvation
 SharkFish=Shark/Fish
+SliderRangeError=Default value of the slider out of range
