--- a/src/resource/GUItext-English.properties
+++ b/src/resource/GUItext-English.properties
@@ -29,3 +29,5 @@ SharkRep=Shark Reproduction
 SharkStarve=Shark Starvation
 SharkFish=Shark/Fish
 SliderRangeError=Default value of the slider out of range
+English=English
+Chinese=Chinese
