add basics for Sugarscape

--- a/src/resource/GUItext-Chinese.properties
+++ b/src/resource/GUItext-Chinese.properties
@@ -5,6 +5,7 @@ FileChooser=\u8BF7\u9009\u62E9XML\u6587\u4EF6
 ErrorMessage=\u9519\u8BEF
 GameOfLife=\u795E\u5947\u7684\u751F\u547D
 Segregation=\u5206\u79BB\u6A21\u578B
+Sugarscape=\u7CD6\u7CD6\u7CD6
 Fire=\u71C3\u70E7\u7684\u706B\u7130
 Predator-Prey=\u6C83\u6258
 Size=\u5C3A\u5BF8
@@ -28,5 +29,6 @@ SharkRep=\u9CA8\u9C7C\u7E41\u6B96
 SharkStarve=\u9CA8\u9C7C\u9965\u997F
 SharkFish=\u9CA8\u9C7C/\u5C0F\u9C7C
 SliderRangeError=\u6ED1\u52A8\u6761\u9ED8\u8BA4\u503C\u8D85\u51FA\u8303\u56F4
+SimTypeError=\u6A21\u62DF\u7C7B\u578B\u9519\u8BEF
 English=\u82F1\u8BED
 Chinese=\u4E2D\u6587
