--- a/src/resource/GUItext-English.properties
+++ b/src/resource/GUItext-English.properties
@@ -14,6 +14,7 @@ Back=Back
 Start=Start
 Stop=Stop
 Reset=Reset
+SaveFile=Save Current Simulation
 Step=Step
 SchellingError=Error Reading Segregation Parameters
 WaTorError=Error Reading WaTor Parameters
