Working visual for ant with bugs

--- a/src/resource/GUItext-English.properties
+++ b/src/resource/GUItext-English.properties
@@ -8,6 +8,7 @@ GameOfLife=Game of Life
 Segregation=Segregation
 Fire=Spreading Fire
 Predator-Prey=WaTor
+Ant=Ant Foraging
 Size=Size
 Speed=Speed
 Back=Back
