let State implement Cloneable

--- a/src/resource/GUItext-Chinese.properties
+++ b/src/resource/GUItext-Chinese.properties
@@ -32,3 +32,4 @@ SliderRangeError=\u6ED1\u52A8\u6761\u9ED8\u8BA4\u503C\u8D85\u51FA\u8303\u56F4
 SimTypeError=\u6A21\u62DF\u7C7B\u578B\u9519\u8BEF
 English=\u82F1\u8BED
 Chinese=\u4E2D\u6587
+SaveFile=\u4FDD\u5B58\u5F53\u524D\u6A21\u62DF
