--- a/src/resource/GUItext-Chinese.properties
+++ b/src/resource/GUItext-Chinese.properties
@@ -3,17 +3,20 @@ ChooseFile=\u9009\u62E9\u6587\u4EF6
 Exit=\u9000\u51FA
 FileChooser=\u8BF7\u9009\u62E9XML\u6587\u4EF6
 ErrorMessage=\u9519\u8BEF
+GoError=\u8BF7\u9009\u62E9\u4E00\u4E2AXML\u6587\u4EF6
 GameOfLife=\u795E\u5947\u7684\u751F\u547D
 Segregation=\u5206\u79BB\u6A21\u578B
 Sugarscape=\u7CD6\u7CD6\u7CD6
 Fire=\u71C3\u70E7\u7684\u706B\u7130
 Predator-Prey=\u6C83\u6258
+Ant=\u8682\u8681\u8FC1\u5F99
 Size=\u5C3A\u5BF8
 Speed=\u66F4\u65B0\u901F\u5EA6
 Back=\u8FD4\u56DE
 Start=\u5F00\u59CB
 Stop=\u505C\u6B62
 Reset=\u91CD\u7F6E
+SaveFile=\u4FDD\u5B58\u5F53\u524D\u6A21\u62DF
 Step=\u4E0B\u4E00\u6B65
 SchellingError=\u8BFB\u53D6\u5206\u79BB\u6A21\u578B\u53C2\u6570\u9519\u8BEF
 WaTorError=\u8BFB\u53D6\u6C83\u8131\u53C2\u6570\u9519\u8BEF
