--- a/src/resource/GUItext-English.properties
+++ b/src/resource/GUItext-English.properties
@@ -23,6 +23,8 @@ WaTorError=Error Reading WaTor Parameters
 FireError=Error Reading Fire Parameters
 LifeError=Error Reading Game of Life Parameters
 FileChooserError=Choose Another File!
+FileSaveError=You did not choose a valid file name!
+FileWriteError=The file could not be written!
 RedBlue=Blue/Red Ratio
 Empty=Empty Ratio
 Ideal=Ideal Ratio
