add Sugarscape xml file

--- a/src/resource/GUItext-English.properties
+++ b/src/resource/GUItext-English.properties
@@ -7,6 +7,7 @@ GoError=Please Select A Simulation File
 GameOfLife=Game of Life
 Segregation=Segregation
 Sugarscape=Sugarscape
+Langton=Langton
 Fire=Spreading Fire
 Predator-Prey=WaTor
 Ant=Ant Foraging
