add agent ratio slider

--- a/src/resource/GUItext-Chinese.properties
+++ b/src/resource/GUItext-Chinese.properties
@@ -35,6 +35,7 @@ FishRep=\u5C0F\u9C7C\u7E41\u6B96
 SharkRep=\u9CA8\u9C7C\u7E41\u6B96
 SharkStarve=\u9CA8\u9C7C\u9965\u997F
 SharkFish=\u9CA8\u9C7C/\u5C0F\u9C7C
+AgentRatio=\u8DF3\u86A4\u767E\u5206\u6BD4
 SliderRangeError=\u6ED1\u52A8\u6761\u9ED8\u8BA4\u503C\u8D85\u51FA\u8303\u56F4
 SimTypeError=\u6A21\u62DF\u7C7B\u578B\u9519\u8BEF
 English=\u82F1\u8BED
