--- a/src/resource/GUItext-English.properties
+++ b/src/resource/GUItext-English.properties
@@ -35,6 +35,7 @@ FishRep=Fish Reproduction
 SharkRep=Shark Reproduction
 SharkStarve=Shark Starvation
 SharkFish=Shark/Fish
+AgentRatio=Agent Percentage
 SliderRangeError=Default value of the slider out of range
 SimTypeError=Simulation Type Error
 English=English
