Add new xml simulation files. Delete ones that did not work

--- a/src/resource/GUItext-English.properties
+++ b/src/resource/GUItext-English.properties
@@ -34,7 +34,7 @@ SharkGain=Shark Gain
 FishRep=Fish Reproduction
 SharkRep=Shark Reproduction
 SharkStarve=Shark Starvation
-SharkFish=Shark/Fish
+SharkFish=Fish/Shark
 AgentRatio=Agent Percentage
 SliderRangeError=Default value of the slider out of range
 SimTypeError=Simulation Type Error
