change shape buttons with Chhinese

--- a/src/resource/GUItext-Chinese.properties
+++ b/src/resource/GUItext-Chinese.properties
@@ -41,3 +41,6 @@ SimTypeError=\u6A21\u62DF\u7C7B\u578B\u9519\u8BEF
 English=\u82F1\u8BED
 Chinese=\u4E2D\u6587
 SaveFile=\u4FDD\u5B58\u5F53\u524D\u6A21\u62DF
+Square=\u6B63\u65B9\u5F62
+Triangle=\u4E09\u89D2\u5F62
+Hexagon=\u516D\u8FB9\u5F62
