--- a/src/resource/GUItext-English.properties
+++ b/src/resource/GUItext-English.properties
@@ -40,3 +40,6 @@ SliderRangeError=Default value of the slider out of range
 SimTypeError=Simulation Type Error
 English=English
 Chinese=Chinese
+Square=Square
+Triangle=Triangle
+Hexagon=Hexagon
